--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -43,7 +43,7 @@ header
 			border: 1px solid $colorGrey;
 			width: 100%;
 			@extend %center1;
-			box-shadow: 1px -2px #cecece;
+			box-shadow: 1px -2px $colorShadow;
 			font-size: 16px;
 			height: 5rem;
 			margin-bottom: 10px;
