--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -63,22 +63,14 @@ header
 		 	font-size: 25px;
 			font-weight: bold;
 			padding-bottom: 3px;
-	    }
-	    .bold2
-	    {
-		 	font-size: 25px;
-			font-weight: bold;
-			padding-bottom: 10px;
+			text-align:center;
+			width:260px;
 	    }
 	    .paragraphe
 	    {
 	 		font-size:20px;
-	    }
-	    .paragraphe1
-	    {
-		    margin-top: 5px;
-		    font-size: 20px;
-		    padding-bottom: 15px;
+	 		text-align:center;
+	 		width:360px;
 	    }
 	    button
 	    {
