--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -280,11 +280,11 @@
 	    .prix
 	    {
 			display: flex;
-			align-items: end;
+			align-items: flex-end;
 			font-weight: bold;
 			 p 
 			 {
-				 padding-bottom: 13px;
+				 padding-bottom: 19px;
 				 padding-right: 15px;
 			 }
 	    }
